# Shorty

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
api/: Cargo.toml
data/: Cargo.toml
data/src/infrastructure/: mongodb.rs
data/src/infrastructure/mongodb/: link.rs
domain/: Cargo.toml
domain/src/: entity.rs  errors.rs  lib.rs  repository.rs
domain/src/entity/: link.rs  metrics.rs  user.rs
domain/src/repository/: link.rs  user.rs
