[package]
name = "data"
version = "0.1.0"
authors = ["haato3o <me@haato.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
async-trait = "0.1.50"
mongodb = "1.2.1"
serde = { version = "1.0.125", features = ["derive"] }
dyn-clone = "1.0.4"