[package]
name = "domain"
version = "0.1.0"
authors = ["haato3o <me@haato.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
chrono = { version = "0.4.0" }
async-trait = { version = "0.1.50" }
dyn-clone = { version = "1.0.4" }
